src/objects/brGuideItem__mdt.object
<CustomObject>
    <fields>
        <fullName>First_Chapter_Url__c</fullName>
        <label>First Chapter Url</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Alt__c</fullName>
        <label>Image Alt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Url_2x__c</fullName>
        <label>Image Url 2x</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <label>Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Community Guide Item</label>
    <pluralLabel>Community Guide Items</pluralLabel>
</CustomObject>